Fixed overflow issue on home

--- a/code/styles/utils/_helpers.scss
+++ b/code/styles/utils/_helpers.scss
@@ -15,3 +15,7 @@
    text-indent: 100%;
    white-space: nowrap;
  }
+
+ .overflow-hidden {
+   overflow: hidden;
+ }
